src/t3/dungeonParser.java
// Generated from /home/leonardo/Waifu/dungeon/src/t3/dungeon.g4 by ANTLR 4.5.3
package t3;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class dungeonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, FLOAT=22, INT=23, IDENT=24, WHITE_SPACE=25, 
		STRING=26, COMMENTARY=27;
	public static final int
		RULE_program = 0, RULE_value = 1, RULE_name = 2, RULE_description = 3, 
		RULE_visible = 4, RULE_empty = 5, RULE_vars_object = 6, RULE_vars_room = 7, 
		RULE_open = 8, RULE_get = 9, RULE_drop = 10, RULE_events = 11, RULE_object_body = 12, 
		RULE_object = 13, RULE_moves = 14, RULE_locked = 15, RULE_north = 16, 
		RULE_south = 17, RULE_east = 18, RULE_west = 19, RULE_objects = 20, RULE_room_body = 21, 
		RULE_room = 22;
	public static final String[] ruleNames = {
		"program", "value", "name", "description", "visible", "empty", "vars_object", 
		"vars_room", "open", "get", "drop", "events", "object_body", "object", 
		"moves", "locked", "north", "south", "east", "west", "objects", "room_body", 
		"room"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'name'", "':'", "'description'", "'visible'", "'empty'", "'open'", 
		"'get'", "'drop'", "'events: {'", "'}'", "'object'", "'{'", "'!'", "'north:'", 
		"'south:'", "'east:'", "'west:'", "','", "'moves: {'", "'objects: {'", 
		"'room'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "FLOAT", "INT", 
		"IDENT", "WHITE_SPACE", "STRING", "COMMENTARY"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "dungeon.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    public static String grupo="<<552003, 551953, 573671, 489026>>";

	public dungeonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<ObjectContext> object() {
			return getRuleContexts(ObjectContext.class);
		}
		public ObjectContext object(int i) {
			return getRuleContext(ObjectContext.class,i);
		}
		public List<RoomContext> room() {
			return getRuleContexts(RoomContext.class);
		}
		public RoomContext room(int i) {
			return getRuleContext(RoomContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dungeonVisitor ) return ((dungeonVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__10) {
				{
				{
				setState(46);
				object();
				}
				}
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__20) {
				{
				{
				setState(52);
				room();
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(dungeonParser.STRING, 0); }
		public TerminalNode INT() { return getToken(dungeonParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(dungeonParser.FLOAT, 0); }
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).exitValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dungeonVisitor ) return ((dungeonVisitor<? extends T>)visitor).visitValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_value);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FLOAT) | (1L << INT) | (1L << STRING))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).exitName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dungeonVisitor ) return ((dungeonVisitor<? extends T>)visitor).visitName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(T__0);
			setState(61);
			match(T__1);
			setState(62);
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DescriptionContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public DescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_description; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).enterDescription(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).exitDescription(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dungeonVisitor ) return ((dungeonVisitor<? extends T>)visitor).visitDescription(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DescriptionContext description() throws RecognitionException {
		DescriptionContext _localctx = new DescriptionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_description);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(T__2);
			setState(65);
			match(T__1);
			setState(66);
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VisibleContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public VisibleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_visible; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).enterVisible(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).exitVisible(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dungeonVisitor ) return ((dungeonVisitor<? extends T>)visitor).visitVisible(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VisibleContext visible() throws RecognitionException {
		VisibleContext _localctx = new VisibleContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_visible);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(T__3);
			setState(69);
			match(T__1);
			setState(70);
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EmptyContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public EmptyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_empty; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).enterEmpty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).exitEmpty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dungeonVisitor ) return ((dungeonVisitor<? extends T>)visitor).visitEmpty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EmptyContext empty() throws RecognitionException {
		EmptyContext _localctx = new EmptyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_empty);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(T__4);
			setState(73);
			match(T__1);
			setState(74);
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Vars_objectContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public VisibleContext visible() {
			return getRuleContext(VisibleContext.class,0);
		}
		public EmptyContext empty() {
			return getRuleContext(EmptyContext.class,0);
		}
		public Vars_objectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vars_object; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).enterVars_object(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).exitVars_object(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dungeonVisitor ) return ((dungeonVisitor<? extends T>)visitor).visitVars_object(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Vars_objectContext vars_object() throws RecognitionException {
		Vars_objectContext _localctx = new Vars_objectContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_vars_object);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(76);
				name();
				}
			}

			setState(80);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(79);
				description();
				}
			}

			setState(83);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(82);
				visible();
				}
			}

			setState(86);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(85);
				empty();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Vars_roomContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public Vars_roomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vars_room; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).enterVars_room(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).exitVars_room(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dungeonVisitor ) return ((dungeonVisitor<? extends T>)visitor).visitVars_room(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Vars_roomContext vars_room() throws RecognitionException {
		Vars_roomContext _localctx = new Vars_roomContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_vars_room);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(88);
				name();
				}
			}

			setState(92);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(91);
				description();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OpenContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(dungeonParser.IDENT, 0); }
		public OpenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_open; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).enterOpen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).exitOpen(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dungeonVisitor ) return ((dungeonVisitor<? extends T>)visitor).visitOpen(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OpenContext open() throws RecognitionException {
		OpenContext _localctx = new OpenContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_open);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(T__5);
			setState(95);
			match(T__1);
			setState(96);
			match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GetContext extends ParserRuleContext {
		public GetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_get; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).enterGet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).exitGet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dungeonVisitor ) return ((dungeonVisitor<? extends T>)visitor).visitGet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GetContext get() throws RecognitionException {
		GetContext _localctx = new GetContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_get);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DropContext extends ParserRuleContext {
		public DropContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_drop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).enterDrop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).exitDrop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dungeonVisitor ) return ((dungeonVisitor<? extends T>)visitor).visitDrop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DropContext drop() throws RecognitionException {
		DropContext _localctx = new DropContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_drop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EventsContext extends ParserRuleContext {
		public OpenContext open() {
			return getRuleContext(OpenContext.class,0);
		}
		public GetContext get() {
			return getRuleContext(GetContext.class,0);
		}
		public DropContext drop() {
			return getRuleContext(DropContext.class,0);
		}
		public EventsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_events; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).enterEvents(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).exitEvents(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dungeonVisitor ) return ((dungeonVisitor<? extends T>)visitor).visitEvents(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EventsContext events() throws RecognitionException {
		EventsContext _localctx = new EventsContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_events);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(102);
				open();
				}
			}

			setState(106);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(105);
				get();
				}
			}

			setState(109);
			_la = _input.LA(1);
			if (_la==T__7) {
				{
				setState(108);
				drop();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Object_bodyContext extends ParserRuleContext {
		public Vars_objectContext vars_object() {
			return getRuleContext(Vars_objectContext.class,0);
		}
		public EventsContext events() {
			return getRuleContext(EventsContext.class,0);
		}
		public Object_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_object_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).enterObject_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).exitObject_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dungeonVisitor ) return ((dungeonVisitor<? extends T>)visitor).visitObject_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Object_bodyContext object_body() throws RecognitionException {
		Object_bodyContext _localctx = new Object_bodyContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_object_body);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			vars_object();
			setState(112);
			match(T__8);
			setState(113);
			events();
			setState(114);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjectContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(dungeonParser.IDENT, 0); }
		public Object_bodyContext object_body() {
			return getRuleContext(Object_bodyContext.class,0);
		}
		public ObjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_object; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).enterObject(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).exitObject(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dungeonVisitor ) return ((dungeonVisitor<? extends T>)visitor).visitObject(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjectContext object() throws RecognitionException {
		ObjectContext _localctx = new ObjectContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_object);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(T__10);
			setState(117);
			match(IDENT);
			setState(118);
			match(T__11);
			setState(119);
			object_body();
			setState(120);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MovesContext extends ParserRuleContext {
		public NorthContext north() {
			return getRuleContext(NorthContext.class,0);
		}
		public SouthContext south() {
			return getRuleContext(SouthContext.class,0);
		}
		public EastContext east() {
			return getRuleContext(EastContext.class,0);
		}
		public WestContext west() {
			return getRuleContext(WestContext.class,0);
		}
		public MovesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moves; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).enterMoves(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).exitMoves(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dungeonVisitor ) return ((dungeonVisitor<? extends T>)visitor).visitMoves(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MovesContext moves() throws RecognitionException {
		MovesContext _localctx = new MovesContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_moves);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_la = _input.LA(1);
			if (_la==T__13) {
				{
				setState(122);
				north();
				}
			}

			setState(126);
			_la = _input.LA(1);
			if (_la==T__14) {
				{
				setState(125);
				south();
				}
			}

			setState(129);
			_la = _input.LA(1);
			if (_la==T__15) {
				{
				setState(128);
				east();
				}
			}

			setState(132);
			_la = _input.LA(1);
			if (_la==T__16) {
				{
				setState(131);
				west();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LockedContext extends ParserRuleContext {
		public LockedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_locked; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).enterLocked(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).exitLocked(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dungeonVisitor ) return ((dungeonVisitor<? extends T>)visitor).visitLocked(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LockedContext locked() throws RecognitionException {
		LockedContext _localctx = new LockedContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_locked);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NorthContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(dungeonParser.IDENT, 0); }
		public LockedContext locked() {
			return getRuleContext(LockedContext.class,0);
		}
		public NorthContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_north; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).enterNorth(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).exitNorth(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dungeonVisitor ) return ((dungeonVisitor<? extends T>)visitor).visitNorth(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NorthContext north() throws RecognitionException {
		NorthContext _localctx = new NorthContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_north);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(T__13);
			setState(138);
			_la = _input.LA(1);
			if (_la==T__12) {
				{
				setState(137);
				locked();
				}
			}

			setState(140);
			match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SouthContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(dungeonParser.IDENT, 0); }
		public LockedContext locked() {
			return getRuleContext(LockedContext.class,0);
		}
		public SouthContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_south; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).enterSouth(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dungeonListener ) ((dungeonListener)listener).exitSouth(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dungeonVisitor ) return ((dungeonVisitor<? extends T>)visitor).visitSouth(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SouthContext south() throws RecognitionException {
		SouthContext _localctx = new SouthContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_south);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(T__14);
			setState(144);
			_la = _input.LA(1);
			if (_la==T__12) {
				{
				setState(143);
				locked();
				}
			}

			setState(146);
			match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
